--- a/1. Handling Missing Values.ipynb
+++ b/1. Handling Missing Values.ipynb
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "daad12af",
    "metadata": {},
    "outputs": [
@@ -1019,11 +1019,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "f28a5402",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#if i use index 0 then i will get the mode value\n",
     "mode_value= df[df['embarked'].notna()]['embarked'].mode()[0]"
    ]
   },
