fe- handling imbalanced dataset by using SMOTE

--- a/2. Handling Imbalanced Dataset.ipynb
+++ b/2. Handling Imbalanced Dataset.ipynb
@@ -286,6 +286,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "05407a1d",
+   "metadata": {},
+   "source": [
+    "### UP SAMPLING\n",
+    "-- in the upsampling data points are created on the minority datapoints locations, thats means it just increasing the data point not the variance. On the same point location it created more and more data. That is not also good, thats why we use SMOTE(synthetic minority Oversampling Technique) because what smote does is in the minority data points it makes a cross bridge line in 2 data points and in that line it creates synthetic data points with variance. and it just connects the existing datapoints and create more datapoints on the line bridge. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "20930226",
@@ -314,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "49877710",
    "metadata": {},
    "outputs": [
@@ -558,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "ed3adc9f",
    "metadata": {},
    "outputs": [
