ordian encoding and label encoding

--- a/6. Data Encoding - Label or Ordinal.ipynb
+++ b/6. Data Encoding - Label or Ordinal.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "80f6ddcd",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,11 @@
     }
    ],
    "source": [
-    "label_encoder.fit_transform(df[['color']])"
+    "label_encoder.fit_transform(df[['color']])\n",
+    "#this transformation will be assigned by the alphabetical order\n",
+    "\n",
+    "## the main problem is in ml model thinks red is greater than blue or green since red has assigned to 2, that is the problem with label encoding\n",
+    "#when we have to assign rank then we use ordinal encoding"
    ]
   },
   {
@@ -498,13 +502,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "de61505a",
    "metadata": {},
    "outputs": [],
    "source": [
     "## create an instance of OrdinalEncoder and then fit_transform\n",
-    "encoder=OrdinalEncoder(categories=[['small','medium','large']])"
+    "encoder=OrdinalEncoder(categories=[['small','medium','large']])\n",
+    "#this will be based on categories order"
    ]
   },
   {
